--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>HOLAA</h1>
     <span>pruebas que estamos realizando en la rama secundaria</span>
-    <p>pruebas exitosas fusionemos</p>
+    <span>hola</span>
 </body>
 </html>
