--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <span>pruebas que estamos realizando en la rama secundaria</span>
 
     <p>pruebas exitosas fusionemos, la fusión ha funcionad?</p><span>hola</span>
-
+    <span>super a github utilizando el alias origin</span>
 
 </body>
 </html>
